# java-gui-launcher

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  launcher.c  launcher.h  launcher.rc.in  launcher_config.h.in  launcher_linux.c  launcher_linux_main.c  launcher_win.c  launcher_win.h  launcher_win_main.c
CMake/: VersionParser.cmake
whereami/: whereami.c  whereami.h
